# Free-HR

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_auth_chat.py  0002_knowledge_store.py  0003_recruitment.py
backend/src/free_hr/: config.py  db.py  models.py
backend/src/free_hr/api/: deps.py  main.py
backend/src/free_hr/api/routes/: chat.py  knowledge.py  recruitment.py
backend/src/free_hr/chat/: __init__.py  citations.py  prompt.py  schemas.py  service.py
backend/src/free_hr/knowledge_ingest/: __init__.py  chunker.py  cli.py  parsers.py  pipeline.py
backend/src/free_hr/knowledge_store/: __init__.py  repo.py  schemas.py
backend/src/free_hr/llm_gateway/: __init__.py  base.py  deepseek.py  factory.py  fake.py  siliconflow.py
backend/src/free_hr/recruitment/: __init__.py  extractor.py  jd_generator.py  llm_util.py  profile.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_ingest_pipeline.py  test_knowledge_schema.py  test_knowledge_store.py  test_recruitment_api.py
backend/tests/unit/: test_chat_service.py  test_chunker.py  test_citations.py  test_config.py  test_llm_gateway.py  test_prompt.py  test_recruitment_extractor.py  test_recruitment_jd_generator.py  test_recruitment_profile.py  test_recruitment_service.py
docs/: mvp-gaps.md
frontend/: pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CenterPanel.tsx  ChatInput.tsx  ChatPanel.tsx  (+12 more)
(+11 files in other folders)
