[project]
name = "free-hr"
version = "0.1.0"
description = "AI labor-law compliance assistant for Chinese SMEs"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "typer>=0.12",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "tenacity>=9.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.11",
    "asgi-lifespan>=2.1",
]

# [project.scripts] will be re-enabled in Task 7 when knowledge_ingest lands:
# [project.scripts]
# free-hr-ingest = "free_hr.knowledge_ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/free_hr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
